# cdd-django-bootstrap

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  setup.cfg
cordada/django_bootstrap/: apps.py
