# Setuptools Configuration
#
# Documentation:
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://setuptools.readthedocs.io/en/latest/userguide/datafiles.html
# - Classifiers: https://pypi.org/classifiers/

[metadata]
name = cordada-django-bootstrap
version = 5.0.0-dev+src.bootstrap.5.0.1
description = A library that packages the Bootstrap web framework as a Django application.
author = Cordada
author_email = no-reply@cordada.com
url = https://github.com/cordada/cdd-django-bootstrap/
license = MIT
classifiers =
  Development Status :: 3 - Alpha
  Framework :: Django
  Framework :: Django :: 3.1
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8

[options]
python_requires = >=3.8
packages = find_namespace:
zip_safe = False
include_package_data = True

[options.packages.find]
where = .
include =
  cordada
exclude =
